Fix alignment and spacing

--- a/src/components/Category/Category.module.css
+++ b/src/components/Category/Category.module.css
@@ -51,7 +51,7 @@
   font-weight: bold;
   color: #186aa5;
   border: 2px solid #186aa5;
-  border-radius: 2.05vw;
+  border-radius: 28px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -106,12 +106,14 @@
     display: none;
   }
   .Category {
-    height: 83px;
+    padding: 0 15px;
+    height: 66px;
     font-size: 33px;
     margin-top: 0;
     margin-bottom: 25px;
-    width: 200px;
+    border-radius: 28px;
   }
+
   .p {
     display: none;
   }
