--- a/src/components/Reviews/Reviews.module.css
+++ b/src/components/Reviews/Reviews.module.css
@@ -61,11 +61,11 @@
 
 .p1 {
   /* font-size: 16px; */
-  font-size: 1.17vw;
+  font-size: 1.3vw;
   color: #362e2e;
   text-align: center;
   /* line-height: 40px; */
-  line-height: 2.9vw;
+  line-height: 2.7vw;
   /* padding-top: 30px; */
   padding-top: 2.2vw;
 }
@@ -77,6 +77,7 @@
   color: #186aa5;
   text-align: center;
 }
+
 /* MObile onlyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
 yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
 yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
@@ -94,23 +95,21 @@ yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
     display: none;
   }
   .card {
-    width: 183px;
-    height: 165px;
+    width: 250px;
+    height: 220px;
     background: #ffffff 0% 0% no-repeat padding-box;
     box-shadow: 0px 0.35vw 0.95vw #00000033;
     mix-blend-mode: multiply;
     opacity: 1;
   }
-  .evenSpace {
-    margin: 0 30px;
-  }
+
   .p1 {
-    font-size: 8px;
+    font-size: 14px;
     text-align: center;
     opacity: 80%;
     line-height: 40px;
     margin: 20px 5px;
-    line-height: 20px;
+    line-height: 30px;
   }
   .p2 {
     font-size: 15px;
